--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,15 @@ dependencies:
   path:
   intl: ^0.17.0
   path_provider:
-  flutter_form_builder: ^6.2.0
+  flutter_form_builder: ^7.1.1
+  form_builder_validators: ^8.1.0
   line_awesome_flutter: ^2.0.0
   flutter_nord_theme: ^2.1.0
   json_annotation:
   focus_detector: ^2.0.1
   flutter_barcode_scanner: ^2.0.0
   loading_indicator:
+  file_picker: ^4.5.1
 
 
 dev_dependencies:
@@ -55,6 +57,8 @@ flutter_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/icon/stuffd_icon.png"
+  adaptive_icon_foreground: "assets/icon/stuffd_text_icon.png"
+  adaptive_icon_background: "#8FBCBB"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
