--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_barcode_scanner: ^2.0.0
   loading_indicator:
   file_picker: ^4.5.1
+  csv: ^5.0.1
+  share_plus: ^4.0.4
 
 
 dev_dependencies:
